--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "FundooDB": "Data Source=SADDAM; Initial, Catalog=Fundoodb; Integrated Security=True"
+    "FundooDB": "Data Source=SADDAM; Initial Catalog=Fundoodb; Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
