[Saddam]Add:Adding some NameSpaces package and refactor th User Forget password

--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "FundooDB": "Data Source=SADDAM; Initial Catalog=Fundoodb; Integrated Security=True"
   },
+  "Credentials": {
+    "testEmailId": "mohd.haniftopia@gmail.com",
+    "testEmailPassword": "agfs1w2.jgihgi"
+  },
   "AllowedHosts": "*"
 }
