[Saddam]Add: Implemented Jwt Tocken Generator

--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -13,5 +13,6 @@
     "testEmailId": "mohd.haniftopia@gmail.com",
     "testEmailPassword": "agfs1w2.jgihgi"
   },
+  "SecretKey": "McQfTjWnZr4u7x!z%CF-JaNdRgUkXp2s5v8y/B?D(G+KbPeShVmYq3t6w9z$C&F)H@McQfTjWnZr4u7x!A%DG-KaNdRgUkXp2s5v8y/B?E(H+MbQeShVmYq3t6w9z$",
   "AllowedHosts": "*"
 }
