[Saddam]Add: Adding StyleCop

--- a/FundooRepository/FundooRepository.csproj
+++ b/FundooRepository/FundooRepository.csproj
@@ -27,4 +27,11 @@
     <ProjectReference Include="..\FundooModels\FundooModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Repository\UserRepository.cs">
+      <ExcludeFromSourceAnalysis>False</ExcludeFromSourceAnalysis>
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
+  </ItemGroup>
+
 </Project>
